--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
 		  </div>
 	  </li>
     <li class="hidden-xs hidden-sm hidden-md" matTooltip="Check us out on Github!">
-      <a href="https://github.com/GrepoDataTools" target="_blank"><mat-icon><img src="assets/images/icons/GitHub.png"/></mat-icon></a>
+      <a href="https://github.com/GrepoDataTools" target="_blank"><mat-icon style="margin-left: -8px;"><img src="assets/images/icons/GitHub.png"/></mat-icon></a>
     </li>
   </ul>
 
