--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -75,8 +75,11 @@
 	</div>
 </mat-card>
 
+<div *ngIf="!loading && num_results <= 0">
+  <app-userscript></app-userscript>
+</div>
 
-<mat-card class="index-card index-card-sm">
+<mat-card class="index-card index-card-sm" *ngIf="num_results > 0">
 	<h2 class="gd-secondary">Latest reports indexed by you</h2>
 
 	<mat-card-content style="padding: 0 30px 15px;">
@@ -85,14 +88,14 @@
 			<mat-progress-bar style="margin-top: -10px;" mode="indeterminate"></mat-progress-bar>
 		</div>
 
-    <div *ngIf="!loading && num_results <= 0">
-      <app-alert type="info" title="You have not yet indexed any reports" [dismissible]="false">
-        <div style="min-height: 73px !important;">
-          <h4>Install our userscript to start colleting intel.</h4>
-          <button class="btn btn-primary" routerLink="/profile/script">Install the city indexer userscript</button>
-        </div>
-      </app-alert>
-    </div>
+<!--    <div *ngIf="!loading && num_results <= 0">-->
+<!--      <app-alert type="info" title="You have not yet indexed any reports" [dismissible]="false">-->
+<!--        <div style="min-height: 73px !important;">-->
+<!--          <h4>Install our userscript to start collecting intel.</h4>-->
+<!--          <button class="btn btn-primary" routerLink="/profile/script">Install the city indexer userscript</button>-->
+<!--        </div>-->
+<!--      </app-alert>-->
+<!--    </div>-->
 
 		<div *ngIf="!loading && num_results > 0">
 
