--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -3,7 +3,10 @@
 		<div class="row">
 			<div class="col-xs-12">
 
-				<h2 style="margin-top: 0;">Install the city indexer <span class="gd-primary">userscript</span></h2>
+				<h2 style="margin-top: 0;">
+          <mat-icon style="font-size: 40px; vertical-align: top; margin-right: 25px; color: #18bc9c;">description</mat-icon>
+          Install the city indexer <span class="gd-primary">userscript</span>
+        </h2>
 				<h4>The GrepoData userscript allows you to collect enemy intelligence while playing Grepolis in your browser.</h4>
 				<br/>
 
