--- a/src/app/indexer/player/player.component.html
+++ b/src/app/indexer/player/player.component.html
@@ -6,7 +6,7 @@
 
 	<mat-card [ngClass]="embedded?'embedded-intel-card':'index-card'" class="index-intel-card">
 		<div [ngClass]="{'embedded-padding': embedded}">
-			<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0;" *ngIf="!embedded">
+			<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0; padding: 20px 0 0 !important;" *ngIf="!embedded">
 
 				<h2 style="cursor: pointer; margin: 0;">
           <span class="hidden-xs hidden-sm">Showing your combined intel for:&nbsp;</span>
@@ -15,17 +15,9 @@
 						<span class="gd-brown">{{playerName}}</span>
 					</div>
 				</h2>
-				<h3>
-	        <span class="index-title" *ngIf="world">
-	          World: <div class="bg-flag flag-inline-middle flag-{{world.substr(0,2)}}"></div>&nbsp;<span class='world-title' *ngIf="world"><a class="a-link-dialog gd-secondary" routerLink="/points" [queryParams]="{world: world}">{{worldName}}&nbsp;({{world}})</a></span>
-	        </span>
-					<span class="index-title" *ngIf="!loading && allianceId != 0">
-	          Alliance: <span class='world-title'><a class="a-link-dialog gd-secondary" routerLink="/intel/alliance/{{world}}/{{allianceId}}">{{allianceName}}</a></span>
-	        </span>
-					<span class="index-title" *ngIf="!loading">
-	          Stats: <span class='world-title'><a class="a-link-dialog gd-secondary" routerLink="/player" [queryParams]="{world: world, id: id}">View player statistics</a></span>
-	        </span>
-				</h3>
+        <br/>
+        <app-indexer-breadcrumbs [data]="breadcrumb_data"></app-indexer-breadcrumbs>
+
 			</div>
 
 	    <mat-card-content class="decorated-card-content" [ngClass]="{'embedded-padding': embedded}" style="padding: 0 !important;">
