--- a/src/app/auth/profile/components/intel/intel.component.scss
+++ b/src/app/auth/profile/components/intel/intel.component.scss
@@ -5,8 +5,8 @@
 }
 
 .loading-overlay {
-  opacity: 0.2;
-  pointer-events: none !important;
+  opacity: 0.5;
+  //pointer-events: none !important;
 }
 
 .top-index-card {
