--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -59,7 +59,7 @@
   <div class="alert alert-gd-1">
     <h2 class="gd-primary">What is a team?</h2>
     <div class="faq-content">
-      An <strong>team</strong> is a collection of enemy intelligence. Anyone can create a new team and invite others to join their team.
+      A <strong>team</strong> is a collection of enemy intelligence. Anyone can create a new team and invite others to join their team.
       The members of a team can then choose to contribute the reports they collect to the team. All members of the team will also be able to browse this intel.
       <br/>
       Our recommendation is that you create a team together with your alliance. This way, you can work together to gather enemy intelligence.
