--- a/src/app/indexer/siege/siege-details-dialog.html
+++ b/src/app/indexer/siege/siege-details-dialog.html
@@ -1,5 +1,5 @@
 <div style="font-size: 18px; width: auto; max-width: 70vw; min-width: 70vw; min-height: 40vh; max-height: 85vh; height: auto;">
-  <a (click)="dialogRef.close()" class="close" style="position: absolute; z-index: 10000; right: 15vw; margin: 5px;"></a>
+  <a (click)="dialogRef.close()" class="close" style="position: absolute; z-index: 10000; right: 15vw; margin: 5px; background-color: #fff;"></a>
 
 	<app-siege
 		[embedded]="true"
