--- a/src/app/indexer/siege/siege-list-dialog.html
+++ b/src/app/indexer/siege/siege-list-dialog.html
@@ -1,14 +1,14 @@
 <div style="font-size: 18px; width: auto; max-width: 50vw; min-width: 50vw; min-height: 40vh; max-height: 70vh; height: auto;">
   <a (click)="dialogRef.close()" class="close"></a>
-  <h1 class="mat-primary" style="color: #18BC9C; margin-top: 0px;" mat-dialog-title>Siege list</h1>
+  <h1 class="mat-primary" style="color: #18BC9C; margin-top: 0px;" mat-dialog-title>Siege list for team <span class="gd-secondary">{{index_name}}</span></h1>
 
 	<div class="report-container container-fluid">
 
 		<div class="row">
 
-			<div class="col-xs=12 text-center" *ngIf="loading">
-				<mat-progress-bar mode="indeterminate"></mat-progress-bar>
-				<strong>Loading siege list..</strong>
+			<div class="col-xs=12 text-center" *ngIf="loading || paging">
+				<mat-progress-bar style="margin-top: -10px;" mode="indeterminate"></mat-progress-bar>
+				<strong *ngIf="loading">Loading siege list..</strong>
 			</div>
 
 			<div class="col-xs-12" *ngIf="!loading && error">
@@ -19,7 +19,15 @@
 				<div class="conquests-container container-fluid">
 					<div class="conquests-list row" style="margin: 0 !important;">
 
-						<div *ngFor="let conquest of sieges" style="padding: 5px 15px;">
+            <mat-paginator *ngIf="from > 0 || num_results > 2" [length]="num_results"
+                           [pageSize]="size"
+                           [pageSizeOptions]="[20, 50, 100]"
+                           (page)="paginatorEvent($event)"
+                           [disabled]="paging"
+                           style="display: flex; justify-content: left;">
+            </mat-paginator>
+
+						<div *ngFor="let conquest of sieges" style="padding: 5px 15px;" [ngClass]="{'gd-loading-overlay': paging}">
 							<app-siege
 								[embedded]="true"
 								[isCard]="true"
