--- a/src/app/indexer/overview/overview.component.scss
+++ b/src/app/indexer/overview/overview.component.scss
@@ -40,7 +40,19 @@
   vertical-align: top;
   padding: 5px 15px;
 }
-
+.intel-info-table {
+  td, th {
+    padding: 2px 0 0;
+    border: none;
+  }
+  th {
+    text-align: right;
+    padding-right: 10px;
+  }
+  p {
+    margin: 0;
+  }
+}
 .no-index-container {
   height: 100%;
 }
