--- a/src/app/shared/dialogs/index-members/index-members.component.html
+++ b/src/app/shared/dialogs/index-members/index-members.component.html
@@ -25,7 +25,7 @@
 								<th scope="col" class="text-center">#</th>
 								<th scope="col" class="text-center">GrepoData username</th>
 								<th scope="col" class="text-center" matTooltip="Remove a user to deny their read access to this team">Can read intel</th>
-								<th scope="col" class="text-center" matTooltip="These users can index new reports and add town notes">Can add intel</th>
+								<th scope="col" class="text-center" matTooltip="Default role for new members: these users can index new reports and add town notes">Can add intel</th>
 								<th scope="col" class="text-center" matTooltip="Team admins can change the index settings. They can also share the team with new users or remove users from the team.">Can manage team settings</th>
 								<th scope="col" class="text-center" matTooltip="Team owners have full control over the team and its settings.">Is team owner</th>
 								<th scope="col" class="text-center" matTooltip="When you remove a user, they will no longer be able to read the intel in this team">Remove user</th>
