Add captcha to password reset

--- a/src/app/auth/profile/components/change-password/change-password.component.html
+++ b/src/app/auth/profile/components/change-password/change-password.component.html
@@ -57,3 +57,10 @@
 
 	</mat-card-content>
 </mat-card>
+
+<re-captcha
+  size="invisible"
+  #captchaRef="reCaptcha"
+  siteKey="{{recaptcha_key}}"
+  (resolved)="$event && resolved_captcha($event)">
+</re-captcha>
